src/components/toolbox/flashMessage/flashMessage.css
@import '../../app/variables.css';
@import '../../app/mixins.css';

.wrapper {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  padding: 0 24px;
  background-color: var(--color-maastricht-blue);
  box-sizing: border-box;
  min-height: 0;
  max-height: 0;
  overflow: hidden;
  position: relative;
  transition:
    max-height var(--animation-speed-standard) linear,
    min-height var(--animation-speed-standard) linear;

  & img {
    margin-right: 7px;
  }

  & .text,
  & .link {
    @mixin contentNormal;

    color: var(--color-mystic);
  }

  & .link {
    @mixin contentNormal bold;

    cursor: pointer;
    margin-left: 10px;
    text-decoration: none;
  }

  & .button {
    min-width: 143px;
    margin-left: auto;
  }

  & .closeBtn {
    align-items: center;
    cursor: pointer;
    display: flex;
    height: 10px;
    justify-content: center;
    margin-left: auto;
    margin-right: -10px;
    padding: 10px;
    width: 10px;

    &::before,
    &::after {
      background-color: #fff;
      content: "";
      height: 14px;
      position: absolute;
      width: 1px;
    }

    &::before {
      transform: rotate(45deg);
    }

    &::after {
      transform: rotate(-45deg);
    }
  }

  &.show {
    min-height: 56px;
    max-height: 56px;
  }
}

